Fix unintentional wrapping when filter type is longer than expected.

--- a/app/assets/stylesheets/design/search/_filters.scss
+++ b/app/assets/stylesheets/design/search/_filters.scss
@@ -20,7 +20,7 @@
       &::after { content: ":"; }
     }
 
-    .name { width: 550px; }
+    .name { width: 490px; }
 
     .icon-fr2 {
       color: $fr-golden;
